--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -6,12 +6,26 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
 .gallery {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
 }
+
+.photo-card {
+  text-align: center;
+  border-radius: 5px;
+  border-color: gray;
+  border: solid;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.photo-card img {
+  width: 100%;
+  height: auto;
+}
+
 .search-form {
   padding: 10;
   width: 100%;
@@ -19,6 +33,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px;
 }
 .submit {
   background-color: rgb(22, 38, 163);
@@ -43,10 +58,12 @@
   gap: 50px;
   justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 .info-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
